# testLearning

./: .gitignore  CMakeLists.txt  README.md
inc/: func.hpp
src/: func.cpp  main.cpp
